@@ -24,6 +24,12 @@ app_confbridge
  * Added the Muted header to the ConfbridgeJoin AMI event to indicate the
    participant's starting mute status.
 
+ * Made the AMI ConfbridgeList action's ConfbridgeList events output all
+   the standard channel snapshot headers instead of a few hand-coded channel
+   snapshot headers.  The benefit is that the CallerIDName gets disruptive
+   characters like CR, LF, Tab, and a few others escaped.  However, an empty
+   CallerIDName is now output as "<unknown>" instead of "<no name>".
+
 app_followme
 ------------------
  * Added a new prompt, connecting-prompt, which will be played
